# rubik_model

./: CLAUDE.md  pyproject.toml
src/rubik_cube_model/: __init__.py  action.py  model.py  move.py  navigation.py  reachable.py  utils.py
tests/: cube_integrity.py  test_action.py  test_move.py  test_rotate.py
