[tool.poetry]
name = "rubik-model"
version = "1.0.3"
description = "Orientation-independent Rubik cube model in strictly typed Python"
authors = ["Yitzchak Gale <gale@sefer.org>"]
readme = "README.md"
packages = [{ include = "rubik_model", from = "src" }]
include = [{ path = "src/rubik_model/py.typed", format = ["sdist", "wheel"] }]
homepage = "https://github.com/ygale/rubik_model"
repository = "https://github.com/ygale/rubik_model"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = ["src", "tests"]
explicit_package_bases = true
